Fix: Remove background color and add overflow to ChatPanelLayout frame

--- a/frontend/srcs/components/UI/iPongChatComponents/ChatPanel/ChatPanelLayout.css
+++ b/frontend/srcs/components/UI/iPongChatComponents/ChatPanel/ChatPanelLayout.css
@@ -1,7 +1,12 @@
 .ChatPanel-frame {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0);
     width: 100%;
     height: 100%;
+    /* margin-top: 1px; */
+    overflow-y: auto;
+    overflow-x: auto;
+
+    /* margin-top: 1px; */
 }
 
 .css-13edjtu {
